// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorStep should render with custom title and subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <h1
      class="mb-8 md:text-4xl text-lg font-bold"
    >
      Custom error title
    </h1>
    <div
      class="mx-auto my-4 w-128"
    >
      <svg>
        mistake-banner.svg
      </svg>
    </div>
    <div
      class="my-8 text-md text-theme-secondary-text"
    >
      Custom error subtitle
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should render with default texts 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <h1
      class="mb-8 md:text-4xl text-lg font-bold"
    >
      Transaction Error
    </h1>
    <div
      class="mx-auto my-4 w-128"
    >
      <svg>
        mistake-banner.svg
      </svg>
    </div>
    <div
      class="my-8 text-md text-theme-secondary-text"
    >
      During the confirmation of the transaction, an error has occured. We recommend that you repeat the transaction or return to your wallet
    </div>
  </div>
</DocumentFragment>
`;
